[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refyne"
version = "0.0.0"
description = "Official Python SDK for the Refyne API - LLM-powered web extraction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Refyne", email = "support@refyne.uk" },
]
keywords = [
    "refyne",
    "web-scraping",
    "extraction",
    "llm",
    "api",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://docs.refyne.uk/docs/sdks/python"
Documentation = "https://docs.refyne.uk/docs/sdks/python"
Repository = "https://github.com/jmylchreest/refyne-sdk-python"
Issues = "https://github.com/jmylchreest/refyne-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/refyne"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "ANN"]
ignore = ["ANN101", "D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
